# int-ball2_simulator

./: .gitignore  INSTALL.md  LICENSE  README.md  README_JP.md  install_script.sh
Int-Ball2_platform_gse/src/flight_software/description/: package.xml
Int-Ball2_platform_gse/src/ground_system/: .gitignore
Int-Ball2_platform_gse/src/ground_system/communication_software/: CMakeLists.txt  package.xml
Int-Ball2_platform_gse/src/ground_system/debug_gui/: CMakeLists.txt  package.xml  start_only_debug_gui.sh
Int-Ball2_platform_gse/src/ground_system/debug_gui/config/: gui_config.ini
Int-Ball2_platform_gse/src/ground_system/debug_gui/launch/: bringup.launch
Int-Ball2_platform_gse/src/ground_system/debug_gui/src/: debug_gui_config.h  debug_main_window.cpp  debug_main_window.h  debug_main_window.ui  main.cpp
Int-Ball2_platform_gse/src/ground_system/gui_common/: CMakeLists.txt  package.xml  resources.qrc
Int-Ball2_platform_gse/src/ground_system/gui_common/config/: camera_and_microphone_params.yml  parameter_manager_publish_param_list.yml
Int-Ball2_platform_gse/src/ground_system/gui_common/src/: additional_property_label.cpp  additional_property_label.h  amount_slider_widget.cpp  amount_slider_widget.h  camera_config.cpp  camera_config.h  camera_microphone_settings_dialog.cpp  camera_microphone_settings_dialog.h  camera_microphone_settings_dialog.ui  command_button.cpp  command_button.h  common_log_object.h  communication_config.cpp  communication_config.h  dialog_factory.cpp  dialog_factory.h  gui_color.cpp  gui_color.h  gui_common.h  gui_config_base.cpp  gui_config_base.h  ib2_msgs.h  image_push_button.cpp  image_push_button.h  led_settings_dialog.cpp  led_settings_dialog.h  led_settings_dialog.ui  meter.cpp  meter.h  platform_msgs.h  qdebug_custom.cpp  qdebug_custom.h  ros_common.cpp  ros_common.h  ros_related_type_definitions.h  telecommand_client.cpp  telecommand_client.h  telecommand_log_area_widget.cpp  telecommand_log_area_widget.h  telemetry_monitor.cpp  (+6 more)
Int-Ball2_platform_gse/src/ground_system/gui_common/src/exception/: config_error.cpp  config_error.h
Int-Ball2_platform_gse/src/ground_system/gui_common/src/model/: dock_telemetry.cpp  dock_telemetry.h  intball_telemetry.cpp  intball_telemetry.h
Int-Ball2_platform_gse/src/ground_system/gui_common/src/ui/: dialog.cpp  dialog.h  dialog.ui  dock_telemetry_widget.cpp  dock_telemetry_widget.h  dock_telemetry_widget.ui  intball_telemetry_header_widget.cpp  intball_telemetry_header_widget.h  intball_telemetry_header_widget.ui  intball_telemetry_widget.cpp  intball_telemetry_widget.h  intball_telemetry_widget.ui  telecommand_camera_microphone_settings_widget.cpp  telecommand_camera_microphone_settings_widget.h  telecommand_camera_microphone_settings_widget.ui  telecommand_camera_microphone_widget.cpp  telecommand_camera_microphone_widget.h  telecommand_camera_microphone_widget.ui  telecommand_control_settings_widget.cpp  telecommand_control_settings_widget.h  telecommand_control_settings_widget.ui  telecommand_dock_widget.cpp  telecommand_dock_widget.h  telecommand_dock_widget.ui  telecommand_led_settings_widget.cpp  telecommand_led_settings_widget.h  telecommand_led_settings_widget.ui  telecommand_led_widget.cpp  telecommand_led_widget.h  telecommand_led_widget.ui  telecommand_manager_widget.cpp  telecommand_manager_widget.h  telecommand_manager_widget.ui  telecommand_navigation_widget.cpp  telecommand_navigation_widget.h  telecommand_navigation_widget.ui  telecommand_prop_widget.cpp  telecommand_prop_widget.h  telecommand_prop_widget.ui  telecommand_rosparam_widget.cpp  (+8 more)
Int-Ball2_platform_gse/src/ground_system/operator_gui/: CMakeLists.txt  package.xml  resources.qrc  start_all.sh  start_only_operator_gui.sh
Int-Ball2_platform_gse/src/ground_system/operator_gui/config/: gui_config.ini
Int-Ball2_platform_gse/src/ground_system/operator_gui/config/rviz/: visual_goal_camera.rviz  visual_intball.rviz
Int-Ball2_platform_gse/src/ground_system/operator_gui/launch/: bringup.launch  bringup_with_debug.launch
Int-Ball2_platform_gse/src/ground_system/operator_gui/script/: intball2_telemetry_stub.py
Int-Ball2_platform_gse/src/ground_system/operator_gui/scxml/: execution_page_statemachine.scxml
Int-Ball2_platform_gse/src/ground_system/operator_gui/src/: camera_view_panel.cpp  camera_view_panel.h  command_toggle_slider.cpp  command_toggle_slider.h  command_tool_button.cpp  command_tool_button.h  crew_support_command_widget.cpp  crew_support_command_widget.h  crew_support_command_widget.ui  editing_page.cpp  editing_page.h  editing_page.ui  execution_page.cpp  execution_page.h  execution_page.ui  ground_system_main_window.cpp  ground_system_main_window.h  ground_system_main_window.ui  intball_route_panel.cpp  intball_route_panel.h  main.cpp  main_camera_view_controller.cpp  main_camera_view_controller.h  main_page.cpp  main_page.h  main_page.ui  operator_gui_common.h  operator_gui_config.h  route_editor.cpp  route_editor.h  route_movement_execution_status_list.cpp  route_movement_execution_status_list.h  route_movement_execution_status_list.ui  route_movement_execution_status_list_icon.cpp  route_movement_execution_status_list_icon.h  route_movement_execution_status_list_item.cpp  route_movement_execution_status_list_item.h  route_point_list.cpp  route_point_list.h  route_point_list.ui  (+12 more)
Int-Ball2_platform_gse/src/ground_system/operator_gui/src/model/: route_information.cpp  route_information.h  route_point.cpp  route_point.h
Int-Ball2_platform_gse/src/ground_system/operator_gui/src/view/: route_information_view.cpp  route_information_view.h
Int-Ball2_platform_gse/src/ground_system/operator_gui/urdf/: ib2.urdf
Int-Ball2_platform_gse/src/ground_system/platform_gui/: CMakeLists.txt  package.xml  resources.qrc  start_only_platform_gui.sh  start_with_debug_gui.sh
Int-Ball2_platform_simulator/src/flight_software/trans_communication/: CMakeLists.txt  README.md  package.xml
Int-Ball2_platform_simulator/src/platform/platform_manager/: CMakeLists.txt  README.md  (+1 more)
Int-Ball2_platform_simulator/src/platform_sim/: README.md
(+4896 files in other folders)
